# golangc

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run_tests.bat  vcpkg.json
docs/: architecture.md  grammar.md  progress.md  use.md
samples/: bufio_demo.go  builder_errors_demo.go  closures.go  defer.go  files_demo.go  floats.go  goroutines.go  interfaces.go  io_demo.go  maps.go  multireturn.go  namedtypes.go  scan_demo.go  select.go  strconv_demo.go  strings_math_demo.go  structs.go  switch.go  sync_demo.go  typeswitch.go  variadic.go  wordfreq.go
src/: CMakeLists.txt
src/ast/: ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp
src/codegen/: x64_codegen.cpp  x64_codegen.hpp  x64_codegen_inst.cpp
src/common/: arena_allocator.hpp  diagnostic.cpp  diagnostic.hpp  result.hpp  source_location.hpp  string_interner.cpp  string_interner.hpp
src/driver/: main.cpp
src/ir/: ir.cpp  ir.hpp  ir_builder.cpp  ir_builder.hpp  ir_gen.cpp  ir_gen.hpp  ir_gen_decl.cpp  ir_gen_expr.cpp  ir_gen_stmt.cpp  ir_pass.hpp  ir_passes.cpp  ir_passes.hpp  ir_printer.cpp  ir_printer.hpp  ir_type_map.cpp  ir_type_map.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: parser.cpp  parser.hpp
src/runtime/: bufio.cpp  fmt_scan.cpp  goroutine_channel.cpp  os_extras.cpp  os_file.cpp  rc.cpp  regexp.cpp  runtime.cpp  runtime.hpp  runtime_internal.hpp  sort.cpp  strconv_ext.cpp  sync.cpp
src/sema/: checker.cpp  checker.hpp  checker_decl.cpp  checker_expr.cpp  checker_stmt.cpp  checker_type.cpp  constant.cpp  constant.hpp  scope.cpp  scope.hpp  types.cpp  types.hpp  universe.cpp  universe.hpp
tests/: CMakeLists.txt
tests/codegen/: test_codegen.cpp
tests/common/: test_arena_allocator.cpp  test_diagnostic.cpp  test_source_location.cpp  test_string_interner.cpp
tests/ir/: test_ir.cpp  test_ir_gen.cpp  test_ir_passes.cpp
tests/lexer/: test_lexer.cpp
tests/parser/: test_parser.cpp
tests/runtime/: test_runtime_leaks.cpp
tests/sema/: test_scope.cpp  test_sema.cpp  test_types.cpp
